VSN-2877: Fix z-index when displayed in layover

--- a/src/aui-ng.css
+++ b/src/aui-ng.css
@@ -170,6 +170,7 @@
 .an-dropdown2 {
     display: none;
     position: absolute;
+    z-index: 3100;
     width: 160px;
     background-color: #fff;
     border: 1px solid #ccc;
